# Autodocking-using-ROS-and-computervision

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
config/: diffdrive.yaml
launch/: freenect_throttle.launch  gazebo.launch  gazebo.launch~  junk.launch  junk.launch~  junkbot.launch  junkbot.launch~  kinect.launch  pan_tilt_junkbot.launch
rviz/: urdf.rviz
src/: Face.py  PID.py  PID_poseestimation_test.py  PID_script.py  info.py  pidscript.py  saber.py  script.py  sub.py
urdf/: 13-diffdrive.urdf.xacro~  junk.urdf .xacro~  junk.urdf.xacro~  junk.xacro
urdf/backup/: junk.urdf.xacro
