<?xml version="1.0"?>
<package>
  <name>junkbot</name>
  <version>0.3.0</version>
  <description>The junkbot</description>
  <author email="chris.vanorarobots@gmail.com">Chris Sunny Thaliyath</author>
  
  <maintainer email="chris.vanorarobots@gmail.com">Chris Sunny Thaliyath</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf_tutorial</run_depend>
  <run_depend>xacro</run_depend>

</package>
